@@ -1,38 +1,33 @@
+// /home/xavier/Projects/SuPOS/LibSupos/SuposTax.cs
+// User: xavier at 15:42 18/10/2007
+//
+
 using System;
-using System.Collections;
 using System.Data;
-using Gdk;
 using Npgsql;
 
 namespace LibSupos
 {
-	public class SuposDbCategory
+	
+	public class SuposTax
 	{
 		private int m_Id = 0;
 		private string m_Name = null;
-		private SuposIcon m_Icon = new SuposIcon();
+		private float m_Rate = 0;
 		private SuposDb m_DataBase = null;
 		
-		//private ArrayList m_Products;
 		
 		//******************************
 		// Constructors
 		//******************************
-		public SuposDbCategory()
-		{	
-			m_Icon = new SuposIcon();
-		}
-
-		public SuposDbCategory( string filename )
-		{	
-			m_Icon = new SuposIcon( filename );
+		public SuposTax()
+		{
 		}
 		
-		public SuposDbCategory(SuposDb db, int id)
+		public SuposTax(SuposDb db, int id)
 		{	
 			m_DataBase = db;
 			m_Id = id;
-			m_Icon = new SuposIcon();
 		}
 		
 		//*************************
@@ -67,11 +62,11 @@ namespace LibSupos
 			}
 		}
 		
-		public SuposIcon Icon
+		public float Rate
 		{
 			get 
 			{
-				return m_Icon;
+				return m_Rate;
 			}
 		}
 		
@@ -85,7 +80,7 @@ namespace LibSupos
 				return false;
 			}
 			// Get next ID
-			NpgsqlCommand command = new NpgsqlCommand("SELECT nextval('categories_id_seq')", db.Connection);
+			NpgsqlCommand command = new NpgsqlCommand("SELECT nextval('taxes_id_seq')", db.Connection);
 			try
 			{
 				m_Id = (int)(Int64)command.ExecuteScalar();
@@ -97,13 +92,13 @@ namespace LibSupos
 			}
 			command.Dispose();
 			// Insert row
-			command = new NpgsqlCommand("INSERT INTO categories(id, name, icon) VALUES(currval('categories_id_seq'), :name, :icon)", db.Connection);
+			command = new NpgsqlCommand("INSERT INTO taxes(id, name, rate) VALUES(currval('categories_id_seq'), :name, :rate)", db.Connection);
 			NpgsqlParameter name_param = new NpgsqlParameter ( ":name", DbType.String );
-			NpgsqlParameter icon_param = new NpgsqlParameter ( ":icon", DbType.Binary );
+			NpgsqlParameter rate_param = new NpgsqlParameter ( ":rate", DbType.Double );
 			name_param.Value = m_Name;
-			icon_param.Value = m_Icon.FileBuffer;
+			rate_param.Value = m_Rate;
 			command.Parameters.Add(name_param);
-			command.Parameters.Add(icon_param);
+			command.Parameters.Add(rate_param);
 			try
 			{
 				command.ExecuteNonQuery();
@@ -114,7 +109,7 @@ namespace LibSupos
 				return false;
 			}
 			this.m_DataBase = db;
-			db.Categories.Add(this);
+			db.Taxes.Add(this);
 			return true;
 			
 		}
@@ -124,15 +119,15 @@ namespace LibSupos
 		//*****************************
 		public bool ApplyChange()
 		{
-			NpgsqlCommand command = new NpgsqlCommand("UPDATE categories SET name=:name, icon=:icon WHERE id=:id", m_DataBase.Connection);
+			NpgsqlCommand command = new NpgsqlCommand("UPDATE taxes SET name=:name, rate=:rate WHERE id=:id", m_DataBase.Connection);
 			NpgsqlParameter name_param = new NpgsqlParameter ( ":name", DbType.String );
-			NpgsqlParameter icon_param = new NpgsqlParameter ( ":icon", DbType.Binary );
+			NpgsqlParameter rate_param = new NpgsqlParameter ( ":icon", DbType.Double );
 			NpgsqlParameter id_param = new NpgsqlParameter ( ":id", DbType.Int64 );
 			name_param.Value = m_Name;
-			icon_param.Value = m_Icon.FileBuffer;
+			rate_param.Value = m_Rate;
 			id_param.Value = m_Id;
 			command.Parameters.Add(name_param);
-			command.Parameters.Add(icon_param);
+			command.Parameters.Add(rate_param);
 			command.Parameters.Add(id_param);
 			try
 			{
@@ -148,5 +143,4 @@ namespace LibSupos
 		
 		
 	}
-
 }
