@@ -1,3 +1,7 @@
+2007-10-18  Xavier Thomas <xavier.thomas.1980 chez gmail dot com> 
+
+	Taxes implemantation begins
+
 2007-10-16  Xavier Thomas <xavier.thomas.1980 chez gmail dot com> 
 
 	bug correction
